additional comments on travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
   - docker build -t multi-ngix ./ngix
   - docker build -t multi-server ./server
   - docker build -t multi-worker ./worker
-  # Log in to the docker CLI
+  # Log in to the docker CLI with the right credentials
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push multi-client
