--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ script:
   - docker run -e CI=true react-test npm test
 
 after_success:
-  - docker build -t multi-client ./client
-  - docker build -t multi-ngix ./ngix
-  - docker build -t multi-server ./server
-  - docker build -t multi-worker ./worker
+  - docker build -t blackwind757/multi-client ./client
+  - docker build -t blackwind757/ multi-ngix ./ngix
+  - docker build -t blackwind757/multi-server ./server
+  - docker build -t blackwind757/multi-worker ./worker
   # Log in to the docker CLI with the right credentials
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push multi-client
-  - docker push multi-nginx
-  - docker push multi-server
-  - docker push multi-worker
+  - docker push blackwind757/multi-client
+  - docker push blackwind757/multi-nginx
+  - docker push blackwind757/multi-server
+  - docker push blackwind757/multi-worker
