--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 
 after_success:
   - docker build -t blackwind757/multi-client ./client
-  - docker build -t blackwind757/multi-ngix ./ngix
+  - docker build -t blackwind757/multi-nginx ./nginx
   - docker build -t blackwind757/multi-server ./server
   - docker build -t blackwind757/multi-worker ./worker
   # Log in to the docker CLI with the right credentials
